--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
             <div class="icon">🎹</div>
             <span>피아노</span>
         </a>
+        <a href="hearing.html" class="menu-button">
+            <div class="icon">🔊</div>
+            <span>절대음감</span>
+        </a>
     </div>
 </body>
 </html>
