--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
             <div class="icon">🔊</div>
             <span>절대음감</span>
         </a>
+        <a href="calculator.html" class="menu-button">
+            <div class="icon">🧭</div>
+            <span>계산기</span>
+        </a>
     </div>
 </body>
 </html>
