--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <span>타이머</span>
         </a>
         <a href="random-num.html" class="menu-button">
-            <div class="icon">🔢</div>
+            <div class="icon">🧸</div>
             <span>번호뽑기</span>
         </a>
 
@@ -169,7 +169,7 @@
             <span>절대음감</span>
         </a>
         <a href="calculator.html" class="menu-button">
-            <div class="icon">🧭</div>
+            <div class="icon">🔢</div>
             <span>계산기</span>
         </a>
     </div>
