--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compact 3D Multi-Calculator</title>
+    <title>Smart 3D Multi-Calculator</title>
     <style>
         :root {
             --bg-color: #121212;
@@ -19,26 +19,28 @@
             background-color: var(--bg-color);
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; /* 위쪽 정렬 */
+            justify-content: flex-start;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            padding: 10px 10px 0 10px; /* 상단 여백 최소화 */
-            font-family: 'Pretendard', sans-serif;
+            padding: 5px 10px 0 10px;
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
             box-sizing: border-box;
         }
 
-        /* 제목: 크기 및 마진 축소 */
+        /* 제목 섹션: 이모지 추가 및 스타일 */
         .main-title {
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             font-weight: 800;
             color: #fff;
-            margin: 5px 0 15px 0; /* 여백 대폭 감소 */
+            margin: 10px 0 15px 0;
             letter-spacing: 1px;
-            text-shadow: 0 0 10px rgba(252, 163, 17, 0.4);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-shadow: 0 0 15px rgba(252, 163, 17, 0.3);
         }
 
-        /* 탭 스타일: 높이 축소 */
         .tabs {
             display: flex;
             gap: 6px;
@@ -48,41 +50,42 @@
         }
         .tab-btn {
             flex: 1;
-            padding: 8px 0;
+            padding: 10px 0;
             border: none;
             border-radius: 10px;
             background: #2a2a2a;
             color: #888;
             cursor: pointer;
-            font-size: 13px;
+            font-size: 14px;
             font-weight: bold;
+            transition: 0.2s;
         }
         .tab-btn.active {
             background: var(--btn-op);
             color: #000;
+            box-shadow: 0 4px 10px rgba(252, 163, 17, 0.2);
         }
 
-        /* 계산기 본체: 세로 패딩 축소 */
         .calculator-container {
             background: var(--calc-bg);
-            padding: 15px;
+            padding: 18px;
             border-radius: 25px;
-            box-shadow: 10px 10px 30px #050505;
+            box-shadow: 10px 10px 30px #050505, -5px -5px 15px #2a2a2a;
             width: 100%;
             max-width: 360px;
             box-sizing: border-box;
             border: 1px solid #333;
         }
 
-        /* 디스플레이: 높이 축소 */
         .display {
             width: 100%;
-            height: 60px;
+            height: 65px;
             background: #000;
             border-radius: 12px;
             text-align: right;
             padding: 10px 15px;
-            font-size: 24px;
+            font-size: 32px;
+            font-weight: bold;
             color: var(--lcd-color);
             box-shadow: inset 4px 4px 10px #000;
             box-sizing: border-box;
@@ -90,11 +93,9 @@
             margin-bottom: 12px;
         }
 
-        /* 모드별 섹션 */
         .mode-section { display: none; margin-bottom: 12px; }
         .mode-section.active { display: block; }
 
-        /* 환율 UI: 콤팩트화 */
         .currency-box {
             background: #111;
             padding: 10px;
@@ -108,60 +109,71 @@
             align-items: center;
             gap: 6px;
         }
-        .curr-row select, .curr-res {
+        .curr-row select {
             flex: 1;
             background: #2a2a2a;
             color: #fff;
             border: none;
-            padding: 8px;
+            padding: 10px;
             border-radius: 6px;
-            font-size: 12px;
-            text-align: center;
+            font-size: 13px;
         }
-        .curr-res { background: #333; color: var(--btn-op); min-height: 32px; font-weight: bold;}
+        .curr-res {
+            flex: 1;
+            background: #333;
+            color: var(--btn-op);
+            height: 45px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 6px;
+            font-size: 14px;
+            font-weight: bold;
+            text-align: center;
+            line-height: 1.2;
+            padding: 0 5px;
+        }
 
-        /* 버튼 그리드: 간격 및 높이 최적화 */
         .grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 8px;
+            gap: 10px;
         }
         button {
-            height: 50px; /* 버튼 높이 축소 */
+            height: 55px;
             border: none;
-            border-radius: 12px;
-            font-size: 17px;
+            border-radius: 14px;
+            font-size: 22px;
             font-weight: 700;
             cursor: pointer;
             background: var(--btn-num);
             color: #fff;
-            box-shadow: 3px 3px 6px #0a0a0a, -1px -1px 4px #3a3a3a;
-            transition: 0.1s;
+            box-shadow: 4px 4px 8px #0a0a0a, -2px -2px 6px #3a3a3a;
+            transition: all 0.1s ease;
         }
         button:active {
-            box-shadow: inset 2px 2px 5px #0a0a0a;
-            transform: scale(0.98);
+            box-shadow: inset 3px 3px 6px #0a0a0a;
+            transform: scale(0.95);
         }
-        .op { background: var(--btn-op); color: #000; }
-        .func { background: var(--btn-func); }
-        .sci { background: var(--btn-sci); color: #000; font-size: 13px; height: 40px; }
+        .op { background: var(--btn-op); color: #000; font-size: 24px; }
+        .func { background: var(--btn-func); font-size: 18px; }
+        .sci { background: var(--btn-sci); color: #000; font-size: 15px; height: 45px; }
 
-        /* 환율 정보바: 텍스트 크기 축소 */
         .info-bar {
             margin-top: 10px;
-            font-size: 10px;
+            font-size: 11px;
             color: #888;
             text-align: center;
-            line-height: 1.3;
+            line-height: 1.4;
             background: rgba(0,0,0,0.3);
-            padding: 5px;
+            padding: 6px;
             border-radius: 8px;
         }
     </style>
 </head>
 <body>
 
-    <h1 class="main-title">🧭 계산기</h1>
+    <h1 class="main-title">🔢 계산기</h1>
 
     <div class="tabs">
         <button class="tab-btn active" onclick="setMode('standard')">일반</button>
@@ -189,13 +201,15 @@
                         <option value="USD">USD 미국</option>
                         <option value="JPY">JPY 일본</option>
                         <option value="EUR">EUR 유럽</option>
+                        <option value="CNY">CNY 중국</option>
                     </select>
-                    <button style="width:28px; height:28px; background:none; border:1px solid #444; color:#fff; border-radius:50%; cursor:pointer;" onclick="swapCurrencies()">⇄</button>
+                    <button style="width:32px; height:32px; background:none; border:1px solid #444; color:#fff; border-radius:50%; cursor:pointer; font-size: 16px;" onclick="swapCurrencies()">⇄</button>
                     <select id="toCurr" onchange="convert()">
                         <option value="USD" selected>USD 미국</option>
                         <option value="KRW">KRW 한국</option>
                         <option value="JPY">JPY 일본</option>
                         <option value="EUR">EUR 유럽</option>
+                        <option value="CNY">CNY 중국</option>
                     </select>
                 </div>
                 <div class="curr-row">
@@ -247,7 +261,8 @@
 
         function exe() {
             try {
-                let res = eval(screen.value.replace(/×/g, '*').replace(/÷/g, '/'));
+                let cleanValue = screen.value.replace(/×/g, '*').replace(/÷/g, '/');
+                let res = eval(cleanValue);
                 screen.value = Number.isInteger(res) ? res : res.toFixed(3);
             } catch { screen.value = "Error"; }
         }
@@ -271,7 +286,7 @@
                 document.getElementById('resultLabel').innerText = (amount * rate).toLocaleString(undefined, {maximumFractionDigits:2}) + " " + to;
                 document.getElementById('currInputLabel').innerText = amount.toLocaleString() + " " + from;
                 const now = new Date();
-                document.getElementById('infoBar').innerHTML = `${now.toLocaleDateString()} ${now.toLocaleTimeString()} | 1 ${from} = ${rate.toFixed(2)} ${to}`;
+                document.getElementById('infoBar').innerHTML = `${now.toLocaleDateString()} ${now.toLocaleTimeString()}<br>1 ${from} = ${rate.toFixed(2)} ${to}`;
             } catch (e) { document.getElementById('resultLabel').innerText = "오류"; }
         }
     </script>
